@@ -24,6 +24,7 @@ public:
 
 	void begin(const BeginParams &params) final override;
 	void motion(const MotionParams &params) final override;
+	void modify(const ModifyParams &params) final override;
 	void hover(const HoverParams &params) final override;
 	void end(const EndParams &params) override;
 
@@ -40,17 +41,17 @@ public:
 
 protected:
 	int op() const { return m_op; }
-	bool antiAlias() const { return m_params.antiAlias; }
+	bool antiAlias() const { return  m_owner.selectionParams().antiAlias; }
 	bool quickDrag() const;
-	int defaultOp() const { return m_params.defaultOp; }
+	int defaultOp() const { return m_owner.selectionParams().defaultOp; }
 	const QPointF &startPoint() const { return m_startPoint; }
 
 	void updateSelectionPreview(const QPainterPath &path) const;
 	void removeSelectionPreview() const;
 
-	virtual const QCursor &originalCursor() const = 0;
-	virtual void beginSelection(const canvas::Point &point) = 0;
-	virtual void continueSelection(const canvas::Point &point) = 0;
+	virtual const QCursor &getCursor(int effectiveOp) const = 0;
+	virtual void beginSelection(const QPointF &point) = 0;
+	virtual void continueSelection(const QPointF &point) = 0;
 	virtual void offsetSelection(const QPoint &offset) = 0;
 	virtual void cancelSelection() = 0;
 	virtual net::MessageList endSelection(uint8_t contextId) = 0;
@@ -58,7 +59,7 @@ protected:
 private:
 	static constexpr qreal EDGE_SLOP = 5.0;
 
-	void updateCursor(const QPointF &point);
+	void updateCursor(const QPointF &point, bool constrain, bool center);
 	void endSelection(bool click, bool onlyMask);
 	net::MessageList endDeselection(uint8_t contextId);
 	bool isInsideSelection(const QPointF &point, bool *atEdge = nullptr) const;
@@ -66,7 +67,6 @@ private:
 	int m_op = -1;
 	bool m_forceSelect = false;
 	bool m_wasForceSelect = false;
-	ToolController::SelectionParams m_params;
 	QPointF m_startPoint;
 	QPointF m_lastPoint;
 	qreal m_zoom = 1.0;
@@ -78,9 +78,9 @@ public:
 	RectangleSelection(ToolController &owner);
 
 protected:
-	virtual const QCursor &originalCursor() const override;
-	void beginSelection(const canvas::Point &point) override;
-	void continueSelection(const canvas::Point &point) override;
+	virtual const QCursor &getCursor(int effectiveOp) const override;
+	void beginSelection(const QPointF &point) override;
+	void continueSelection(const QPointF &point) override;
 	void offsetSelection(const QPoint &offset) override;
 	void cancelSelection() override;
 	net::MessageList endSelection(uint8_t contextId) override;
@@ -98,9 +98,9 @@ public:
 	PolygonSelection(ToolController &owner);
 
 protected:
-	virtual const QCursor &originalCursor() const override;
-	void beginSelection(const canvas::Point &point) override;
-	void continueSelection(const canvas::Point &point) override;
+	virtual const QCursor &getCursor(int effectiveOp) const override;
+	void beginSelection(const QPointF &point) override;
+	void continueSelection(const QPointF &point) override;
 	void offsetSelection(const QPoint &offset) override;
 	void cancelSelection() override;
 	net::MessageList endSelection(uint8_t contextId) override;
