@@ -22,6 +22,9 @@ Cursors::Cursors()
 		  QCursor(QPixmap(QStringLiteral(":/cursors/layerpicker.png")), 2, 29))
 	, m_line(QPixmap(":cursors/line.png"), 2, 2)
 	, m_magicWand(QPixmap(":cursors/magicwand.png"), 2, 2)
+	, m_magicWandExclude(QPixmap(":cursors/magicwand-exclude.png"), 2, 2)
+	, m_magicWandIntersect(QPixmap(":cursors/magicwand-intersect.png"), 2, 2)
+	, m_magicWandUnite(QPixmap(":cursors/magicwand-unite.png"), 2, 2)
 	, m_move(QPixmap(QStringLiteral(":/cursors/move.png")), 12, 12)
 	, m_moveMask(QPixmap(QStringLiteral(":/cursors/move-mask.png")), 7, 7)
 	, m_rectangle(QPixmap(":cursors/rectangle.png"), 2, 2)
@@ -29,7 +32,16 @@ Cursors::Cursors()
 	, m_rotateDiscrete(QCursor(
 		  QPixmap(QStringLiteral(":/cursors/rotate-discrete.png")), 16, 16))
 	, m_selectLasso(QPixmap(":cursors/select-lasso.png"), 2, 29)
+	, m_selectLassoExclude(QPixmap(":cursors/select-lasso-exclude.png"), 2, 29)
+	, m_selectLassoIntersect(QPixmap(":cursors/select-lasso-intersect.png"), 2, 29)
+	, m_selectLassoUnite(QPixmap(":cursors/select-lasso-unite.png"), 2, 29)
 	, m_selectRectangle(QPixmap(":cursors/select-rectangle.png"), 2, 2)
+	, m_selectRectangleExclude(
+		  QPixmap(":cursors/select-rectangle-exclude.png"), 2, 2)
+	, m_selectRectangleIntersect(
+		  QPixmap(":cursors/select-rectangle-intersect.png"), 2, 2)
+	, m_selectRectangleUnite(
+		  QPixmap(":cursors/select-rectangle-unite.png"), 2, 2)
 	, m_shearDiagB(QPixmap(QStringLiteral(":/cursors/shear-bdiag.png")), 13, 13)
 	, m_shearDiagF(QPixmap(QStringLiteral(":/cursors/shear-fdiag.png")), 13, 13)
 	, m_shearH(QPixmap(QStringLiteral(":/cursors/shear-h.png")), 12, 12)
