@@ -26,13 +26,46 @@ public:
 	static const QCursor &layerPick() { return get()->m_layerPick; }
 	static const QCursor &line() { return get()->m_line; }
 	static const QCursor &magicWand() { return get()->m_magicWand; }
+	static const QCursor &magicWandExclude()
+	{
+		return get()->m_magicWandExclude;
+	}
+	static const QCursor &magicWandIntersect()
+	{
+		return get()->m_magicWandIntersect;
+	}
+	static const QCursor &magicWandUnite() { return get()->m_magicWandUnite; }
 	static const QCursor &move() { return get()->m_move; }
 	static const QCursor &moveMask() { return get()->m_moveMask; }
 	static const QCursor &rectangle() { return get()->m_rectangle; }
 	static const QCursor &rotate() { return get()->m_rotate; }
 	static const QCursor &rotateDiscrete() { return get()->m_rotateDiscrete; }
 	static const QCursor &selectLasso() { return get()->m_selectLasso; }
+	static const QCursor &selectLassoExclude()
+	{
+		return get()->m_selectLassoExclude;
+	}
+	static const QCursor &selectLassoIntersect()
+	{
+		return get()->m_selectLassoIntersect;
+	}
+	static const QCursor &selectLassoUnite()
+	{
+		return get()->m_selectLassoUnite;
+	}
 	static const QCursor &selectRectangle() { return get()->m_selectRectangle; }
+	static const QCursor &selectRectangleExclude()
+	{
+		return get()->m_selectRectangleExclude;
+	}
+	static const QCursor &selectRectangleIntersect()
+	{
+		return get()->m_selectRectangleIntersect;
+	}
+	static const QCursor &selectRectangleUnite()
+	{
+		return get()->m_selectRectangleUnite;
+	}
 	static const QCursor &shearDiagB() { return get()->m_shearDiagB; }
 	static const QCursor &shearDiagF() { return get()->m_shearDiagF; }
 	static const QCursor &shearH() { return get()->m_shearH; }
@@ -66,13 +99,22 @@ private:
 	const QCursor m_layerPick;
 	const QCursor m_line;
 	const QCursor m_magicWand;
+	const QCursor m_magicWandExclude;
+	const QCursor m_magicWandIntersect;
+	const QCursor m_magicWandUnite;
 	const QCursor m_move;
 	const QCursor m_moveMask;
 	const QCursor m_rectangle;
 	const QCursor m_rotate;
 	const QCursor m_rotateDiscrete;
 	const QCursor m_selectLasso;
+	const QCursor m_selectLassoExclude;
+	const QCursor m_selectLassoIntersect;
+	const QCursor m_selectLassoUnite;
 	const QCursor m_selectRectangle;
+	const QCursor m_selectRectangleExclude;
+	const QCursor m_selectRectangleIntersect;
+	const QCursor m_selectRectangleUnite;
 	const QCursor m_shearDiagB;
 	const QCursor m_shearDiagF;
 	const QCursor m_shearH;
